fix: allow for long titles on smaller resolutions (#372)
* fix: allow for long titles on smaller resolutions

* fix: pencil icon should edit too

--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -36,20 +36,17 @@
   margin-left: 8px;
 }
 
-.TopBar .project-title-container {
+.TopBar .project-title-header {
   display: flex;
   align-items: center;
-}
-
-.TopBar .ground {
-  margin-right: 10px;
 }
 
 .TopBar .project-title {
   user-select: none;
   cursor: pointer;
-  display: flex;
-  align-items: center;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .TopBar .edit-project-icon {
